--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,7 @@ python:
   - "3.5"
   - "pypy"
   - "pypy3"
-install: true
-script:  nosetests -v
+install:
+  - pip install -r requirements.txt
+script:
+  - nosetests -v
