--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ environment:
 
 install:
 
-  - "%PYTHON%\\python.exe -m pip install nose mock django"
+  - "%PYTHON%\\python.exe -m pip install nose mock django==1.8.18"
 
 build: off
 
