--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
+sudo: false
 language: python
-python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
-  - "3.6"
-  - "3.7"
-  - "pypy"
-install:
-  - pip install -r requirements.txt
-script:
-  - nosetests -v
+install: pip install -r requirements.txt
+script: nosetests -v
+matrix:
+  include:
+    - python: 2.7
+    - python: 3.4
+    - python: 3.5
+    - python: 3.6
+    - python: 3.7
+      dist: xenial
+    - python: pypy
