--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,29 @@
 [tox]
-envlist=py27,py34,py35,py36
+envlist=py27,py34,py35,py36,py37,pypy,lint
+skip_missing_interpreters=True
+
 [testenv]
-deps=nose
-     mock
-     django>=1.11,<1.12
-commands=nosetests
+deps=
+    django<2
+    mock
+    pytest
+    pytest-django
+commands=python -m pytest
+setenv =
+    DJANGO_SETTINGS_MODULE=tests.settings
+    PYTHONPATH={toxinidir}:{toxinidir}/tests
+
+[pytest]
+addopts=
+    --doctest-modules
+    --doctest-glob "*.rst"
+    --ignore tests/benchmark_core.py
+    --ignore tests/benchmark_djangocache.py
+    --ignore tests/benchmark_glob.py
+    --ignore tests/plot.py
+norecursedirs=site-packages
+testpaths=docs diskcache tests
+
+[testenv:lint]
+deps=pylint
+commands=pylint diskcache
