--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,7 @@ skip_missing_interpreters=True
 
 [testenv]
 deps=
-    django<2
-    mock
+    django==1.11.*
     pytest
     pytest-django
 commands=python -m pytest
