Add nose back as dep (for Python 2.7)

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ skip_missing_interpreters=True
 [testenv]
 deps=
     django==1.11.*
+    mock
     pytest
     pytest-django
 commands=python -m pytest
