Add pytest-env and env vars for pytest

--- a/tox.ini
+++ b/tox.ini
@@ -23,6 +23,9 @@ addopts=
     --ignore tests/plot.py
 norecursedirs=site-packages
 testpaths=docs diskcache tests
+env =
+    DJANGO_SETTINGS_MODULE=tests.settings
+    PYTHONPATH={PWD}:{PWD}/tests
 
 [testenv:lint]
 deps=pylint
