Add django_redis and pylibmc for tests

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,9 @@ skip_missing_interpreters=True
 [testenv]
 deps=
     django==1.11.*
+    django_redis
     mock
+    pylibmc
     pytest
     pytest-django
 commands=python -m pytest
@@ -15,11 +17,10 @@ setenv =
 
 [pytest]
 addopts=
-    --doctest-modules
-    --doctest-glob "*.rst"
     --ignore tests/benchmark_core.py
     --ignore tests/benchmark_djangocache.py
     --ignore tests/benchmark_glob.py
+    --ignore tests/issue_85.py
     --ignore tests/plot.py
 norecursedirs=site-packages
 testpaths=docs diskcache tests
@@ -28,5 +29,7 @@ env =
     PYTHONPATH={PWD}:{PWD}/tests
 
 [testenv:lint]
-deps=pylint
+deps=
+    django==1.11.*
+    pylint
 commands=pylint diskcache
