Add pytest-xdist and setup for parallel testing

--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ setenv =
 
 [pytest]
 addopts=
+    -n auto
     --ignore tests/benchmark_core.py
     --ignore tests/benchmark_djangocache.py
     --ignore tests/benchmark_glob.py
