--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ deps=
     mock
     pytest
     pytest-django
+    pytest-xdist
 commands=python -m pytest
 setenv =
     DJANGO_SETTINGS_MODULE=tests.settings
