Change PYTHONPATH for Windows testing

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ deps=
 commands=python -m pytest
 setenv =
     DJANGO_SETTINGS_MODULE=tests.settings
-    PYTHONPATH={toxinidir}:{toxinidir}/tests
+    PYTHONPATH={toxinidir}
 
 [pytest]
 addopts=
