--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skip_missing_interpreters=True
 deps=
     django==1.11.*
     mock
-    pytest
+    pytest==4.6.*
     pytest-django
     pytest-xdist
 commands=python -m pytest
