tests: Use unittest.mock over external mock
Mocking support is built-in since Python 3.3.  Use it over external
mock when available.  This helps distributions that are phasing Python 2
out and would like to remove mock package as part of that.

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ skip_missing_interpreters=True
 [testenv]
 deps=
     django==1.11.*
-    mock
+    mock;python_version<"3.3"
     pytest==4.6.*
     pytest-django
     pytest-xdist
