--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,8 @@ skip_missing_interpreters=True
 
 [testenv]
 deps=
-    django==1.11.*
-    mock
-    pytest==4.6.*
+    django==2.2.*
+    pytest
     pytest-django
     pytest-xdist
 commands=python -m pytest
@@ -28,9 +27,9 @@ env =
     DJANGO_SETTINGS_MODULE=tests.settings
     PYTHONPATH={PWD}:{PWD}/tests
 
-[testenv:lint]
+[testenv:pylint]
 deps=
-    django==1.11.*
+    django==2.2.*
     pylint
 commands=pylint diskcache
 
