--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,6 @@ install: python -m pip install tox
 script: python -m tox -e py
 matrix:
   include:
-    - python: 2.7
-      env: TOXENV=py27
-    - python: 3.4
-      env: TOXENV=py34
     - python: 3.5
       env: TOXENV=py35
     - python: 3.6
@@ -15,6 +11,9 @@ matrix:
     - python: 3.7
       dist: xenial
       env: TOXENV=py37
+    - python: 3.8
+      dist: xenial
+      env: TOXENV=py38
     - python: pypy
       env: TOXENV=pypy
     - python: 3.7
