--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ matrix:
       env: TOXENV=py38
     - python: pypy
       env: TOXENV=pypy
-    - python: 3.7
+    - python: 3.8
       dist: xenial
-      env: TOXENV=lint
+      env: TOXENV=pylint
