Add flake8 to linters and fix issues

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps=
     pytest-django
     pytest-xdist
 commands=python -m pytest
-setenv =
+setenv=
     DJANGO_SETTINGS_MODULE=tests.settings
     PYTHONPATH={toxinidir}
 
@@ -27,8 +27,17 @@ testpaths=docs diskcache tests
 [testenv:pylint]
 deps=
     django==2.2.*
+    flake8
     pylint
-commands=pylint diskcache
+commands=
+    flake8 diskcache
+    pylint diskcache
 
 [doc8]
 ignore=D000
+
+[flake8]
+ignore=
+    E124
+    E303
+    W503
