Remove travis and appveyor in favor of GitHub Actions

--- a/tox.ini
+++ b/tox.ini
@@ -1,43 +1,93 @@
 [tox]
-envlist=py35,py36,py37,py38,pylint
+envlist=bluecheck,doc8,docs,isortcheck,flake8,mypy,pylint,rstcheck,py36,py37,py38,py39
 skip_missing_interpreters=True
 
 [testenv]
+commands=pytest
 deps=
     django==2.2.*
     pytest
     pytest-django
     pytest-xdist
-commands=python -m pytest
 setenv=
     DJANGO_SETTINGS_MODULE=tests.settings
-    PYTHONPATH={toxinidir}
+
+[testenv:blue]
+commands=blue {toxinidir}/setup.py {toxinidir}/diskcache {toxinidir}/tests
+deps=blue
+
+[testenv:bluecheck]
+commands=blue --check {toxinidir}/setup.py {toxinidir}/diskcache {toxinidir}/tests
+deps=blue
+
+[testenv:doc8]
+deps=doc8
+commands=doc8 docs
+
+[testenv:docs]
+allowlist_externals=make
+changedir=docs
+commands=make html
+deps=sphinx
+
+[testenv:flake8]
+commands=flake8 {toxinidir}/setup.py {toxinidir}/diskcache {toxinidir}/tests
+deps=flake8
+
+[testenv:isort]
+commands=isort {toxinidir}/setup.py {toxinidir}/diskcache {toxinidir}/tests
+deps=isort
+
+[testenv:isortcheck]
+commands=isort --check {toxinidir}/setup.py {toxinidir}/diskcache {toxinidir}/tests
+deps=isort
+
+[testenv:mypy]
+commands=mypy {toxinidir}/diskcache
+deps=mypy
+
+[testenv:pylint]
+commands=pylint {toxinidir}/diskcache
+deps=pylint
+
+[testenv:rstcheck]
+commands=rstcheck {toxinidir}/README.rst
+deps=rstcheck
+
+[testenv:uploaddocs]
+allowlist_externals=rsync
+changedir=docs
+commands=
+    rsync -azP --stats --delete _build/html/ \
+        grantjenks.com:/srv/www/www.grantjenks.com/public/docs/diskcache/
+
+[isort]
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+use_parentheses = True
+ensure_newline_before_comments = True
+line_length = 79
 
 [pytest]
 addopts=
     -n auto
+    --cov-branch
+    --cov-fail-under=100
+    --cov-report=term-missing
+    --cov=diskcache
+    --doctest-glob="*.rst"
     --ignore tests/benchmark_core.py
     --ignore tests/benchmark_djangocache.py
     --ignore tests/benchmark_glob.py
     --ignore tests/issue_85.py
     --ignore tests/plot.py
-norecursedirs=site-packages
-testpaths=docs diskcache tests
-
-[testenv:pylint]
-deps=
-    django==2.2.*
-    flake8
-    pylint
-commands=
-    flake8 diskcache
-    pylint diskcache
 
 [doc8]
-ignore=D000
+# ignore=D000
 
 [flake8]
-ignore=
-    E124
-    E303
-    W503
+# ignore=
+#     E124
+#     E303
+#     W503
