Add django to deps for sphinx and pylint

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,9 @@ commands=doc8 docs
 allowlist_externals=make
 changedir=docs
 commands=make html
-deps=sphinx
+deps=
+    django==2.2.*
+    sphinx
 
 [testenv:flake8]
 commands=flake8 {toxinidir}/setup.py {toxinidir}/diskcache {toxinidir}/tests
@@ -48,7 +50,9 @@ deps=mypy
 
 [testenv:pylint]
 commands=pylint {toxinidir}/diskcache
-deps=pylint
+deps=
+    django==2.2.*
+    pylint
 
 [testenv:rstcheck]
 commands=rstcheck {toxinidir}/README.rst
