--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ deps=blue
 
 [testenv:doc8]
 deps=doc8
-commands=doc8 docs
+commands=doc8 docs --ignore-path docs/_build
 
 [testenv:docs]
 allowlist_externals=make
