Update flake8 configs

--- a/tox.ini
+++ b/tox.ini
@@ -91,7 +91,6 @@ addopts=
 # ignore=D000
 
 [flake8]
-# ignore=
-#     E124
-#     E303
-#     W503
+exclude=tests/test_djangocache.py
+extend-ignore=E203
+max-line-length=120
