Fix configs for pytest

--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,12 @@ commands=pytest
 deps=
     django==2.2.*
     pytest
+    pytest-cov
     pytest-django
     pytest-xdist
 setenv=
     DJANGO_SETTINGS_MODULE=tests.settings
+    PYTHONPATH={toxinidir}
 
 [testenv:blue]
 commands=blue {toxinidir}/setup.py {toxinidir}/diskcache {toxinidir}/tests
@@ -81,6 +83,8 @@ addopts=
     --cov-report=term-missing
     --cov=diskcache
     --doctest-glob="*.rst"
+    --ignore docs/case-study-web-crawler.rst
+    --ignore docs/sf-python-2017-meetup-talk.rst
     --ignore tests/benchmark_core.py
     --ignore tests/benchmark_djangocache.py
     --ignore tests/benchmark_glob.py
