--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Install libmemcached-dev
+      run: |
+        sudo apt-get update
+        sudo apt-get install libmemcached-dev
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
