Disable consider-using-f-string

--- a/.pylintrc
+++ b/.pylintrc
@@ -143,6 +143,7 @@ disable=print-statement,
         no-else-return,
         duplicate-code,
         inconsistent-return-statements,
+        consider-using-f-string,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
