--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,35 +9,22 @@ jobs:
 
   upload:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
 
     steps:
     - uses: actions/checkout@v3
-
-    - name: Install libmemcached-dev
-      run: |
-        sudo apt-get update
-        sudo apt-get install libmemcached-dev
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        pip install --upgrade pip
-        pip install -r requirements-dev.txt
+    - name: Install build
+      run: pip install build
 
-    - name: Create source dist
-      run: python setup.py sdist
+    - name: Create build
+      run: python -m build
 
-    - name: Create wheel dist
-      run: python setup.py bdist_wheel
-
-    - name: Upload with twine
-      env:
-        TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
-      run: |
-        ls -l dist/*
-        twine upload dist/*
+    - name: Publish package distributions to PyPI
+      uses: pypa/gh-action-pypi-publish@release/v1
