Update the query only branch. (#297)
* Remove unused "env" setting from pytest section

* Remove nose references

* Fixes for pylint in Python 3.8

* Update 2019 date references to 2020

* Update references to Python 2 support

* Remove Python 2 shims

* Add flake8 to linters and fix issues

* Add locked method to Lock

* Add paragraph to caveats about cache volume for Issue #140

* Bump version to 5.0.0

* Remove Python 2 mapping methods keys/values/items/iter*/view*

* Update tests for Python 3

* Bump version to 5.0.1

* Bump version to 5.0.2

* Add python_requires kwarg to setup

* Bump version to 5.0.3

* Prevent cache shard attribute access when unsafe

* Support transactions in FanoutCache (probably a bad idea)

* Bump version to 5.1.0

* Use no hardcoded /tmp/diskcache/... paths in tests

* replace open mode 'w' to 'x'

* Use disk provided by the user whenever possible

* Remove transaction from Deque.__init__

When initializing a Deque, a transaction was used to extend elements from the
given iterable. The transaction is not used in Index.__init__ or in the
FanoutCache.fromcache API.

Users that want Deque.__init__ to use a transaction as before should use:

    d = Deque()
    with d.transact():
        d.extend(iterable)

The transaction is therefore explicit and consistent with other APIs.

* Use the same Disk in FanoutCache as in Index and Deque subdirs

* Remove travis and appveyor in favor of GitHub Actions

* Rewrite k/v store benchmarking to avoid IPython "magic" syntax

* Update development requirements for editable install

* I blue it

* Make imports consistent with isort

* Increase max attributes to 8

* Tell mypy to ignore django

* Remove useless `dataset` target

* Ignore type errors when setting class attributes

* Add django to deps for sphinx and pylint

* Tell doc8 to ignore docs/_build dir

* Update flake8 configs

* Flake8 fixes (mostly removing useless

--- a/tox.ini
+++ b/tox.ini
@@ -1,37 +1,101 @@
 [tox]
-envlist=py35,py36,py37,py38,pylint
+envlist=bluecheck,doc8,docs,isortcheck,flake8,mypy,pylint,rstcheck,py38,py39,py310,py311
 skip_missing_interpreters=True
 
 [testenv]
+commands=pytest
 deps=
-    django==2.2.*
+    django==4.2.*
     pytest
+    pytest-cov
     pytest-django
     pytest-xdist
-commands=python -m pytest
-setenv =
+setenv=
     DJANGO_SETTINGS_MODULE=tests.settings
     PYTHONPATH={toxinidir}
+
+[testenv:blue]
+commands=blue {toxinidir}/setup.py {toxinidir}/diskcache {toxinidir}/tests
+deps=blue
+
+[testenv:bluecheck]
+commands=blue --check {toxinidir}/setup.py {toxinidir}/diskcache {toxinidir}/tests
+deps=blue
+
+[testenv:doc8]
+commands=doc8 docs --ignore-path docs/_build
+deps=doc8
+
+[testenv:docs]
+allowlist_externals=make
+changedir=docs
+commands=make html
+deps=
+    django==4.2.*
+    sphinx
+
+[testenv:flake8]
+commands=flake8 {toxinidir}/setup.py {toxinidir}/diskcache {toxinidir}/tests
+deps=flake8
+
+[testenv:isort]
+commands=isort {toxinidir}/setup.py {toxinidir}/diskcache {toxinidir}/tests
+deps=isort
+
+[testenv:isortcheck]
+commands=isort --check {toxinidir}/setup.py {toxinidir}/diskcache {toxinidir}/tests
+deps=isort
+
+[testenv:mypy]
+commands=mypy {toxinidir}/diskcache
+deps=mypy
+
+[testenv:pylint]
+commands=pylint {toxinidir}/diskcache
+deps=
+    django==4.2.*
+    pylint
+
+[testenv:rstcheck]
+commands=rstcheck {toxinidir}/README.rst
+deps=rstcheck
+
+[testenv:uploaddocs]
+allowlist_externals=rsync
+changedir=docs
+commands=
+    rsync  --rsync-path 'sudo -u herokuish rsync' -azP --stats --delete \
+        _build/html/ \
+        grantjenks:/srv/www/grantjenks.com/public/docs/diskcache/
+
+[isort]
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+use_parentheses = True
+ensure_newline_before_comments = True
+line_length = 79
 
 [pytest]
 addopts=
     -n auto
+    --cov-branch
+    --cov-fail-under=98
+    --cov-report=term-missing
+    --cov=diskcache
+    --doctest-glob="*.rst"
+    --ignore docs/case-study-web-crawler.rst
+    --ignore docs/sf-python-2017-meetup-talk.rst
     --ignore tests/benchmark_core.py
     --ignore tests/benchmark_djangocache.py
     --ignore tests/benchmark_glob.py
     --ignore tests/issue_85.py
     --ignore tests/plot.py
-norecursedirs=site-packages
-testpaths=docs diskcache tests
-env =
-    DJANGO_SETTINGS_MODULE=tests.settings
-    PYTHONPATH={PWD}:{PWD}/tests
-
-[testenv:pylint]
-deps=
-    django==2.2.*
-    pylint
-commands=pylint diskcache
 
 [doc8]
-ignore=D000
+# ignore=D000
+
+[flake8]
+exclude=tests/test_djangocache.py
+extend-ignore=E203
+max-line-length=120
